# argus

./: Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
argus_core/: consumer.py  ingest.py  main.py  metrics.py  models.py
argus_core/alerts/: engine.py  webhook.py
argus_core/drift/: chi_squared.py  engine.py  js_divergence.py  ks_test.py  psi.py  shap_drift.py
argus_core/registry/: model_registry.py
argus_core/store/: duckdb_analytics.py  timescale.py
config/: alert_rules.yaml  config.yaml  settings.py
dashboards/: argus.json
demo/: real_degradation_demo.py  synthetic_drift_demo.py
docs/: demo.md
docs/internal/: DOCUMENTATION.md
grafana/provisioning/dashboards/: argus.yml
scripts/: init_timescaledb.sql
sdk/: __init__.py  client.py
tests/: conftest.py  test_alert_engine.py  test_chi_squared.py  test_ingest.py  test_integration.py  test_js_divergence.py  test_ks_test.py  test_psi.py  test_shap_drift.py
